@@ -7,7 +7,9 @@
  */
 
 #define _GNU_SOURCE
+#ifndef __FreeBSD__
 #include <stdint.h>
+#endif
 #include <stdio.h>
 #include <stdlib.h>
 #include <getopt.h>
@@ -177,10 +179,11 @@ static int parse_args(int argc, char *argv[]) {
 
 
 static int output_file(void) {
-  int fd, bit, mask, i = 0, j;
+  int bit, mask, i = 0, j;
   int64_t val, pad; 
+  FILE *fp;
 
-  if ((fd = open(out_file, O_WRONLY | O_CREAT | O_TRUNC, 0644)) < 0) {
+  if ((fp = fopen(out_file, "w")) == 0) {
     fprintf(stderr, "Error: [%d] %s\n", errno, strerror(errno));
     return 1;
   }
@@ -190,42 +193,42 @@ static int output_file(void) {
    */
   pad = (frequency / baud);
 
-  dprintf(fd, "# rs232 Stimulus generated by rs232-gen\n\n");
-  dprintf(fd, "stimulus asynchronous_stimulus\n");
-  dprintf(fd, "initial_state 1\n");
-  dprintf(fd, "start_cycle 0\n\n");
+  fprintf(fp, "# rs232 Stimulus generated by rs232-gen\n\n");
+  fprintf(fp, "stimulus asynchronous_stimulus\n");
+  fprintf(fp, "initial_state 1\n");
+  fprintf(fp, "start_cycle 0\n\n");
 
   while ((data[i].size != -1) && (i < MAX_DATA)) {
-    dprintf(fd, "# Chunk: %d\n", i);
+    fprintf(fp, "# Chunk: %d\n", i);
     val = data[i].cycle;
 
     for (j = 0; j < data[i].size; j++) {
-      dprintf(fd, "# Character: 0x%02X", data[i].data[j]);
+      fprintf(fp, "# Character: 0x%02X", data[i].data[j]);
       if (isprint(data[i].data[j]))
-        dprintf(fd, "  (%c)\n", data[i].data[j]);
+        fprintf(fp, "  (%c)\n", data[i].data[j]);
       else
-        dprintf(fd, "\n");
+        fprintf(fp, "\n");
 
-      dprintf(fd, "%lld 0\n", val);
+      fprintf(fp, "%lld 0\n", val);
       val += pad;
 
       for (mask = 0x01; mask < 0xFF; mask = mask << 1) {
         bit = ((data[i].data[j] & (mask & 0xFF)) ? 1 : 0);
-        dprintf(fd, "%lld %d\n", val, bit);
+        fprintf(fp, "%lld %d\n", val, bit);
         val += pad;
       }
 
-      dprintf(fd, "%lld 1\n\n", val);
+      fprintf(fp, "%lld 1\n\n", val);
       val += pad;
     }
 
     i++;
   }
 
-  dprintf(fd, "name %s\n", name);
-  dprintf(fd, "end\n");
+  fprintf(fp, "name %s\n", name);
+  fprintf(fp, "end\n");
 
-  if (close(fd) != 0) {
+  if (fclose(fp) != 0) {
     fprintf(stderr, "Error: [%d] %s\n", errno, strerror(errno));
     return 1;
   }
