@@ -1,3 +1,6 @@
+2004-03-03  Bert Driehuis <driehuis@playbeing.org>
+	* /extras/rs232-gen/rs232.c:  Now compiles under BSD
+
 2004-03-03 Scott Dattalo  <scott@dattalo.com>
 	* gui/gui_profile.cc, gui/gui_src_asm.cc, src/cod.cc,
 	src/icd.cc, src/pic-processor.cc, src/processor.cc, src/processor.h
